2009-11-29  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Eric Seidel.

        Test using Id as index of node list.
        https://bugs.webkit.org/show_bug.cgi?id=31428

        * fast/dom/Element/id-in-node-list-index01-expected.txt: Added.
        * fast/dom/Element/id-in-node-list-index01.html: Added.
2009-11-29  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Eric Seidel.

        Continue to search for matching node in the case where multiple nodes
        have the same id.
        https://bugs.webkit.org/show_bug.cgi?id=31428

        Test: fast/dom/Element/id-in-node-list-index01.html

        * dom/DynamicNodeList.cpp:
        (WebCore::DynamicNodeList::itemWithName):

git-svn-id: svn://svn.chromium.org/blink/trunk@51471 bbb929c8-8fbe-4397-9dbb-9b2b20218538